# nordata

./: .gitignore  CHANGELOG.md  LISCENSE.txt  Pipfile  README.md  dev_requirements.txt  nordata.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Nordata/: _s3.py
NuttyPy/: _redshift.py
nordata/: __init__.py  _boto.py  _redshift.py  _s3.py
src/: _redshift.py  _s3.py
test/: test.sql  test_boto.py  test_redshift.py  test_s3.py
