[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "nordata"
author = "Nick Buker"
author-email = "nick.buker@nordstrom.net"
home-page = "https://github.com/Nordstrom/nordata"
requires = [
    "boto3 >=1.9.38",
    "psycopg2-binary >=2.7.5",
]
requires-python = ">=3.6,<4"
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
